kubernetes/keel/keel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: keel
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: keel.tom-mendy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keel
            port:
              number: 9300
